--- a/PhenoPad/SpeechPage.xaml
+++ b/PhenoPad/SpeechPage.xaml
@@ -30,7 +30,7 @@
     
     <Page.Resources>
         <local:BackgroundColorConverter x:Key="bcConverter" />
-        
+        <local:IntervalDisplayConverter x:Key="intervalConverter" />
         
     </Page.Resources>
 
@@ -62,17 +62,22 @@
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
 
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Padding" Value="0"/>
+                    <Setter Property="Margin" Value="0"/>
+                </Style>
+            </ListView.ItemContainerStyle>
+
             <ListView.ItemContainerTransitions>
                 <TransitionCollection/>
             </ListView.ItemContainerTransitions>
 
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:TextMessage">
-                    <Grid Margin="10">
+                    <Grid Margin="6">
                         <Grid.RowDefinitions>
-                            <RowDefinition />
                             <RowDefinition Height="Auto" />
-                            <RowDefinition />
                         </Grid.RowDefinitions>
 
                         <Grid.ColumnDefinitions>
@@ -80,9 +85,10 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <!--Left/Top polygon-->
+                        <!--
+                        
                         <Polygon
-                            Grid.Row="0"
+                            Grid.Row="1"
                             Grid.Column="{Binding TextColumn}"
                             Fill="{Binding Converter={StaticResource bcConverter}}"
                             HorizontalAlignment="Left"
@@ -91,32 +97,33 @@
                             Margin="0,0,10,0">
                         </Polygon>
 
-                        <!--Right/Bottom polygon-->
+                        
                         <Polygon
-                            Grid.Row="2"
+                            Grid.Row="1"
                             Grid.Column="{Binding TextColumn}"
                             Fill="{Binding Converter={StaticResource bcConverter}}"
                             HorizontalAlignment="Right"
-                            Points="0,0 18,0 18,18"
+                            Points="18,0 18,18 0,18"
                             Visibility="{x:Bind OnRight}"
                             Margin="0,0,10,0"/>
-
+                        -->
+                        
                         <!--Finalized message color-->
                         <Grid
-                            Grid.Row="1"
+                            Grid.Row="0"
                             Grid.Column="{Binding TextColumn}"
                             Background="{Binding Converter={StaticResource bcConverter}}"
                             Visibility="{x:Bind Path=IsFinal}"/>
 
                         <!--Not finalized message color-->
                         <Grid
-                            Grid.Row="1"
+                            Grid.Row="0"
                             Grid.Column="{Binding TextColumn}"
                             Background="{StaticResource Background_Temp}"
                             Visibility="{x:Bind Path=IsNotFinal}"/>
 
                         <Grid
-                            Grid.Row="1"
+                            Grid.Row="0"
                             Grid.Column="{Binding TextColumn}">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -130,46 +137,36 @@
                                 TextWrapping="Wrap"
                                 MinWidth="300"
                                 MaxWidth="500"
-                                FontSize="16"
+                                FontSize="18"
                                 Padding="3"
                                 VerticalAlignment="Center"
                                 Foreground="WhiteSmoke"/>
 
-                            <TextBlock
-                                Grid.Row="1"
-                                FontSize="10"
-                                Text="{x:Bind DisplayTime}"
-                                TextWrapping="Wrap"
-                                Opacity="0.7"
-                                Padding="3" />
+                            <Button Grid.Row="1" 
+                                    Background="Transparent"
+                                    HorizontalAlignment="Stretch"
+                                    Click="MessageButtonClick">
+                                <TextBlock
+                                    FontSize="14"
+                                    Text="{Binding Converter={StaticResource intervalConverter}}"
+                                    TextWrapping="Wrap"
+                                    Padding="3" 
+                                    Foreground="WhiteSmoke"
+                                />
+                            </Button>
                         </Grid>
-
-                        <!--<StackPanel
-                            Orientation="Horizontal"
-                            Grid.Column="{Binding PhenoColumn}"
-                            Grid.Row="0"
-                            Grid.RowSpan="3"
-                            Padding="10">
-
-                            <Button
-                                Content="Phenotype here"
-                                FontSize="20"
-                                Padding="10"
-                                Foreground="Black"/>
-                        </StackPanel>-->
 
                         <ListView x:Name="phenoFromConversationListView" 
                                     Grid.Column="{Binding PhenoColumn}"
                                     Grid.Row="0"
-                                    Grid.RowSpan="3"
-                                    Padding="10"
-                                    ItemsSource="{x:Bind phenotypesInText, Mode=OneWay}">
+                                    Padding="6"
+                                    ItemsSource="{Binding phenotypesInText}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
                                     <customcontorl:PhenotypeControl phenotypeName="{x:Bind name}" 
                                                                     phenotypeId="{x:Bind hpId}" 
                                                                     phenotypeState="{x:Bind state}"
-                                                                    sourceType="Notes"/>
+                                                                    sourceType="Speech"/>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                             <ListView.ItemContainerStyle>
@@ -197,6 +194,8 @@
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="Padding" Value="0"/>
+                    <Setter Property="Margin" Value="0"/>
                 </Style>
             </ListView.ItemContainerStyle>
             
@@ -206,32 +205,21 @@
 
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:TextMessage">
-                    <Grid Margin="10">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
+                    <Grid Margin="6">
 
                         <!--Right/Bottom polygon-->
-                        <Polygon
+                        <!--<Polygon
                             Grid.Row="1"
                             Fill="LightSlateGray"
                             HorizontalAlignment="Right"
                             Points="0,0 18,0 18,18"
                             Visibility="Visible"
-                            Margin="0,0,10,0"/>
+                            Margin="0,0,10,0"/>-->
 
-                        <!--Finalized message color-->
+                        <!--Message color-->
                         <Grid
                             Grid.Row="0"
-                            Background="LightSlateGray"
-                            Visibility="{x:Bind Path=IsFinal}"/>
-
-                        <!--Not finalized message color-->
-                        <Grid
-                            Grid.Row="0"
-                            Background="LightSlateGray"
-                            Visibility="{x:Bind Path=IsNotFinal}"/>
+                            Background="LightSlateGray"/>
 
                         <Grid
                             Grid.Row="0">
@@ -247,55 +235,21 @@
                                 TextWrapping="Wrap"
                                 MinWidth="90"
                                 MaxWidth="500"
-                                FontSize="16"
+                                FontSize="18"
                                 Padding="3"
                                 VerticalAlignment="Center"
                                 Foreground="WhiteSmoke"/>
 
                             <TextBlock
                                 Grid.Row="1"
-                                FontSize="10"
-                                Text="{x:Bind DisplayTime}"
+                                FontSize="14"
+                                Text="{Binding Converter={StaticResource intervalConverter}}"
                                 TextWrapping="Wrap"
                                 Opacity="0.7"
-                                Padding="3" />
+                                Padding="3" 
+                                Foreground="WhiteSmoke"/>
                         </Grid>
-
-                        <!--<StackPanel
-                            Orientation="Horizontal"
-                            Grid.Column="{Binding PhenoColumn}"
-                            Grid.Row="0"
-                            Grid.RowSpan="3"
-                            Padding="10">
-
-                            <Button
-                                Content="Phenotype here"
-                                FontSize="20"
-                                Padding="10"
-                                Foreground="Black"/>
-                        </StackPanel>-->
-
-                        <ListView x:Name="phenoFromConversationListView" 
-                                    Grid.Column="{Binding PhenoColumn}"
-                                    Grid.Row="0"
-                                    Grid.RowSpan="3"
-                                    Padding="10"
-                                    ItemsSource="{x:Bind phenotypesInText, Mode=OneWay}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate x:DataType="phenotypeservice:Phenotype">
-                                    <customcontorl:PhenotypeControl phenotypeName="{x:Bind name}" 
-                                                                    phenotypeId="{x:Bind hpId}" 
-                                                                    phenotypeState="{x:Bind state}"
-                                                                    sourceType="Notes"/>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                            <ListView.ItemContainerStyle>
-                                <Style TargetType="ListViewItem">
-                                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                                </Style>
-                            </ListView.ItemContainerStyle>
-                        </ListView>
-
+                        
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
@@ -319,7 +273,13 @@
                         Content="Speaker 1"
                         Background="{StaticResource Background_0}"/>
                 </ComboBox>
+                
             </StackPanel>
+
+            <MediaPlayerElement x:Name="_mediaPlayerElement" 
+                                    AreTransportControlsEnabled="True" 
+                                    HorizontalAlignment="Stretch"  Grid.Column="1"
+                                Visibility="Collapsed"/>
 
             <!--<Grid
                 Grid.Column="1">
